# robot_controller

./: .gitignore  pyproject.toml  requirements.txt
assets/app/: icon.icns
qml/: main.qml
qml/components/atoms/: IconBtn.qml
qml/components/molecules/: DbPicker.qml  EditPositionPopup.qml  IpChip.qml  JogControlPopup.qml  JogToggleButton.qml  NavButton.qml  OffsetPopup.qml  PositionItem.qml  PositionPopup.qml  RobotActionsChip.qml  RobotStatesChip.qml  RobotViewerPopup.qml  SpeedChip.qml  TextInputBar.qml  ThreeDToggleButton.qml
qml/components/organisms/: ListPosition.qml  Sidebar.qml
qml/pages/: ConfigurationPage.qml  EquipamentosPage.qml  PositionsPage.qml  TrajectoriesPage.qml
robot_viewer/: CLAUDE.md  pyside6_example.py  viewer.html
robot_viewer/lib/: TransformControls.js  URDFLoader.js  three.js  urdf-manipulator-element.js  urdf-viewer-element.js
robot_viewer/model/urdf/: fr3v6.urdf
sql/joints/: delete_all.sql  delete_pose.sql  insert_pose.sql  select_all.sql  update_pose.sql
sql/migrations/: 001_create_pose_table.sql  002_add_config_column.sql  003_create_joint_pose_table.sql  004_rename_table.sql
src/: main.py
src/controllers/: position_controller.py  robot_controller.py
src/db/: db_manager.py
src/model/: positionJ_model.py
src/repository/: positionJ_repository.py
src/services/: gamepad_service.py  robot_service.py
